--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,7 +19,7 @@
             android:id="@+id/play"
             android:layout_width="30dp"
             android:layout_height="30dp"
-            android:src="@drawable/setting"/>
+            android:src="@drawable/play"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
