--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context=".MainActivity"
-    android:background="@drawable/splash">
+    android:background="@drawable/spalshscreen">
     <RelativeLayout
         android:id="@+id/relative_play"
         android:layout_width="wrap_content"
@@ -17,19 +17,20 @@
         android:layout_marginRight="40dp">
         <ImageView
             android:id="@+id/play"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:background="@android:color/transparent"
             android:src="@drawable/play"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Play"
             android:textColor="#ffffff"
-            android:layout_toRightOf="@+id/play"
             android:textStyle="bold"
-            android:layout_marginRight="10dp"
             android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-            />
+            android:layout_centerVertical="true"
+            android:layout_toRightOf="@+id/play"
+            android:layout_toEndOf="@+id/play" />
 
     </RelativeLayout>
     <RelativeLayout
@@ -39,9 +40,10 @@
     android:layout_alignParentBottom="true">
         <ImageView
             android:id="@+id/settingicon"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:src="@drawable/setting"/>
+            android:layout_width="35dp"
+            android:layout_height="35dp"
+            android:background="@android:color/transparent"
+            android:src="@drawable/settings"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -59,9 +61,11 @@
             android:orientation="horizontal">
         <ImageView
             android:id="@+id/highscoreicon"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:src="@drawable/highscore"
+            android:layout_marginBottom="10dp"
+            android:background="@android:color/transparent"
             android:layout_alignParentRight="true"/>
         <TextView
             android:layout_width="wrap_content"
@@ -71,6 +75,7 @@
             android:layout_toRightOf="@+id/highscoreicon"
             android:textStyle="bold"
             android:layout_marginRight="10dp"
+            android:layout_marginTop="10dp"
             android:textAppearance="@style/TextAppearance.AppCompat.Medium"
             />
         </LinearLayout>
