--- a/app/src/main/res/layout/selectnumbers.xml
+++ b/app/src/main/res/layout/selectnumbers.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@drawable/pickballoon">
 
     <LinearLayout
         android:id="@+id/linear1"
@@ -196,12 +197,5 @@ android:orientation="horizontal"
         </RelativeLayout>
 
     </LinearLayout>
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Pick your balloon"
-        android:layout_gravity="center"
-        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-        android:textStyle="bold"
-        android:textColor="#000000"/>
+
 </LinearLayout>
