--- a/app/src/main/res/layout/ani_image_view.xml
+++ b/app/src/main/res/layout/ani_image_view.xml
@@ -3,7 +3,12 @@
     android:id="@+id/aniImageView"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_centerHorizontal="true"
     android:layout_alignParentBottom="true"
+    android:layout_alignParentLeft="true"
     android:src="@drawable/baloon"
-    android:scaleType="fitCenter" />
+    android:scaleType="fitCenter" >
+
+
+</ImageView>
+
+
