--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -2,8 +2,18 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/main_layout"
     android:layout_width="fill_parent"
-    android:gravity="center_horizontal"
     android:layout_height="fill_parent"
-    android:background="@drawable/background2" >
+    android:background="@drawable/background2"
+    >
+
+
+    <ImageView
+
+        android:id="@+id/pause"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:padding="8dp"
+        android:src="@drawable/pause"
+        android:layout_alignParentRight="true"/>
 
 </RelativeLayout>
