--- a/app/src/main/res/layout/menudialog.xml
+++ b/app/src/main/res/layout/menudialog.xml
@@ -1,36 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/menu">
+    android:background="#000000">
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@drawable/menu"/>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
     <ImageView
         android:id="@+id/resume"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/resume"
         android:layout_gravity="center"
-        android:layout_marginTop="130dp"/>
+        android:layout_marginTop="120dp"/>
     <ImageView
         android:id="@+id/level"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/levelbackground"
+        android:src="@drawable/level"
         android:layout_gravity="center"
-        android:layout_marginTop="10dp"/>
+        android:layout_marginTop="8dp"/>
     <ImageView
         android:id="@+id/score"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/scores"
+        android:src="@drawable/score"
         android:layout_gravity="center"
-        android:layout_marginTop="10dp"/>
+        android:layout_marginTop="8dp"/>
     <ImageView
         android:id="@+id/exit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/exit"
         android:layout_gravity="center"
-        android:layout_marginTop="10dp"/>
+        android:layout_marginTop="8dp"/>
 
+    </LinearLayout>
 
-</LinearLayout>
+</RelativeLayout>
