--- a/app/src/main/res/layout/menudialog.xml
+++ b/app/src/main/res/layout/menudialog.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#000000">
+    >
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -11,36 +11,45 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginBottom="5dp"
         android:orientation="vertical">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="0.3"></LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1.5"
+                android:padding="30dp"
+                android:orientation="vertical">
     <ImageView
         android:id="@+id/resume"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
         android:src="@drawable/resume"
         android:layout_gravity="center"
-        android:layout_marginTop="120dp"/>
+      />
     <ImageView
         android:id="@+id/level"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/level"
-        android:layout_gravity="center"
-        android:layout_marginTop="8dp"/>
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"        android:src="@drawable/level"
+        android:layout_gravity="center"/>
     <ImageView
         android:id="@+id/score"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/score"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"        android:src="@drawable/score"
         android:layout_gravity="center"
-        android:layout_marginTop="8dp"/>
-    <ImageView
+/>    <ImageView
         android:id="@+id/exit"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/exit"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"        android:src="@drawable/exit"
         android:layout_gravity="center"
-        android:layout_marginTop="8dp"/>
-
+/>            </LinearLayout>
     </LinearLayout>
 
 </RelativeLayout>
